--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>test</h1>
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <title>页面标题</title>
+</head>
+<body>
+    <h1>test</h1>
+    <p>这里是页面的内容。</p>
+</body>
+</html>
