--- a/index.html
+++ b/index.html
@@ -8,16 +8,81 @@
             text-align: center;
             padding-top: 50px; /* 添加一些顶部内边距 */
         }
+        .title {
+            font-size: 48px; /* 放大标题字体 */
+        }
+        .button {
+            font-size: 24px; /* 设置按钮字体大小 */
+            padding: 10px 20px; /* 增加按钮内边距，使按钮看起来更大 */
+            margin-top: 20px; /* 添加按钮和标题之间的间距 */
+        }
         .time {
             font-size: 24px; /* 设置时间的字体大小 */
             margin-top: 20px; /* 添加时间和按钮之间的间距 */
         }
+        /* 弹窗样式 */
+        .modal {
+            display: none; /* 默认不显示弹窗 */
+            position: fixed; /* 固定定位 */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* 半透明背景 */
+            justify-content: center;
+            align-items: center;
+            z-index: 1000; /* 确保弹窗在最上层 */
+        }
+        .modal-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            position: relative; /* 相对定位，以便关闭按钮可以正确定位 */
+        }
+        .modal-header {
+            text-align: center;
+            margin-bottom: 10px;
+        }
+        .modal-header a {
+            color: blue;
+            text-decoration: underline;
+            cursor: pointer;
+        }
+        .modal-close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 24px;
+            font-weight: bold;
+            color: #000;
+            text-shadow: 0 1px 0 #fff;
+            opacity: 0.5;
+        }
+        .modal-close:hover,
+        .modal-close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+            opacity: 0.9;
+        }
     </style>
 </head>
 <body>
-    <h1 style="font-size: 36px;">test</h1>
-    <button style="font-size: 20px;">test</button>
+    <h1 class="title">test</h1>
+    <button class="button" id="myButton">点击我</button>
     <p class="time" id="time"></p>
+
+    <!-- 弹窗内容 -->
+    <div class="modal" id="myModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <a href="https://www.example.com" target="_blank">访问网站</a>
+            </div>
+            <div class="modal-close">&times;</div>
+        </div>
+    </div>
+
     <script>
         function updateTime() {
             var now = new Date();
@@ -28,6 +93,28 @@
         }
         setInterval(updateTime, 1000); // 每秒更新时间
         updateTime(); // 初始化时间
+
+        // 获取按钮和弹窗元素
+        var button = document.getElementById('myButton');
+        var modal = document.getElementById('myModal');
+        var closeButton = document.querySelector('.modal-close');
+
+        // 添加点击事件监听器
+        button.onclick = function() {
+            modal.style.display = 'flex'; // 显示弹窗
+        }
+
+        // 关闭弹窗的点击事件
+        closeButton.onclick = function() {
+            modal.style.display = 'none'; // 隐藏弹窗
+        }
+
+        // 点击弹窗外部关闭弹窗
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = 'none'; // 隐藏弹窗
+            }
+        }
     </script>
 </body>
 </html>
