--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     </style>
 </head>
 <body>
-    <h1 class="title">test</h1>
-    <button class="button" id="myButton">点击我</button>
+    <h1 class="title">一个测试网站</h1>
+    <button class="button" id="myButton">点击我，获取链接！</button>
     <p class="time" id="time"></p>
 
     <!-- 弹窗内容 -->
     <div class="modal" id="myModal">
         <div class="modal-content">
             <div class="modal-header">
-                <a href="https://www.example.com" target="_blank">访问网站</a>
+                <a href="https://www.bilibili.com/video/BV1GJ411x7h7/" target="_blank">情趣网站</a>
             </div>
             <div class="modal-close">&times;</div>
         </div>
