--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         
         <!-- 底部备注 -->
         <div class="footer">
-            <p class="small">补充说明：因暂无旺财，财财相片，所以暂时空缺。花咪的懒得拍</p>
+            <p class="small">补充说明：因暂无旺财，财财相片，所以暂时空缺。花咪的懒得拍。</p>
             <p class="large">2024.8.28</p>
         </div>
     </div>
