--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>怀念旺旺</title>
+    <title>一个悼念网站</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -99,7 +99,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>永远怀念</h1>
+        <h1>永远怀念，旺旺!</h1>
+       <p class="large">2015-2024.7.26</p>
         <button class="button" onclick="handleButtonClick()">为他悼念</button>
         <p>亲爱的旺旺，你是我们生命中最珍贵的朋友。你的温暖和陪伴让每一天都充满了快乐。虽然你已经离开了我们，但你永远活在我们的心中。感谢你带来的所有美好回忆，你的爱与忠诚将永远被铭记。愿你在天堂中安息，永远幸福。至此。</p>
         <p>也为其他为我们家做出贡献的犬，猫表达怀念，他们的名字是：</p>
@@ -112,16 +113,16 @@
                     <p>野狗<br>2023-now</p>
                 </div>
                 <div>
-                    <p>小旺<br>2016?-2021</p>
+                    <p>小旺<br>2016?-2021.8.27</p>
                     <button class="button" onclick="handlePetClick('小旺')">为他悼念</button>
                 </div>
                 <div>
-                    <p>旺财<br>2020-2023</p>
-                    <button class="button" onclick="handlePetClick('旺财')">为他悼念</button>
+                    <p>旺财<br>2020-2023.4.22</p>
+                    <button class="button" onclick="handlePetClick('旺财')">为她悼念</button>
                 </div>
                 <div>
-                    <p>财财<br>2020-2023</p>
-                    <button class="button" onclick="handlePetClick('财财')">为他悼念</button>
+                    <p>财财<br>2020-2023.1.14</p>
+                    <button class="button" onclick="handlePetClick('财财')">为她悼念</button>
                 </div>
             </div>
         </div>
@@ -131,7 +132,7 @@
             <h2>猫</h2>
             <div class="pet-images">
                 <div>
-                    <p>黑咪<br>?-2022</p>
+                    <p>黑咪<br>?-2022.7</p>
                     <button class="button" onclick="handlePetClick('黑咪')">为他悼念</button>
                 </div>
                 <div>
@@ -167,4 +168,4 @@
         }
     </script>
 </body>
-</html>
+    </html>
