--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 <body>
     <div class="container">
         <h1>永远怀念，旺旺!</h1>
+        <img src="1.jpg" alt="旺旺的照片">
        <p class="large">2015-2024.7.26</p>
         <button class="button" onclick="handleButtonClick()">为他悼念</button>
         <p>亲爱的旺旺，你是我们生命中最珍贵的朋友。你的温暖和陪伴让每一天都充满了快乐。虽然你已经离开了我们，但你永远活在我们的心中。感谢你带来的所有美好回忆，你的爱与忠诚将永远被铭记。愿你在天堂中安息，永远幸福。至此。</p>
