--- a/index.html
+++ b/index.html
@@ -146,14 +146,12 @@
         <!-- 底部备注 -->
         <div class="footer">
             <p class="small">补充说明：因暂无旺财，财财相片，所以暂时空缺。花咪的懒得拍。</p>
-            <p class="large">2024.8.28</p>
+            <p class="large">2024.8.28 2024.10.23一修</p>
         </div>
     </div>
     <script>
-        // 处理按钮点击状态
         let hasClicked = false;
 
-        // 处理"为他悼念"按钮点击事件
         function handleButtonClick() {
             if (!hasClicked) {
                 alert("感谢您对他的悼念。");
@@ -163,7 +161,6 @@
             }
         }
 
-        // 处理宠物按钮点击事件
         function handlePetClick(petName) {
             alert("感谢您为" + petName + "悼念。");
         }
