--- a/index.html
+++ b/index.html
@@ -112,17 +112,21 @@
             <div class="pet-images">
                 <div>
                     <p>野狗<br>2023-now</p>
+                    <img src="2.jpg" alt="野狗的照片">
                 </div>
                 <div>
                     <p>小旺<br>2016?-2021.8.27</p>
+                    <img src="3.jpg" alt="小旺的照片">
                     <button class="button" onclick="handlePetClick('小旺')">为他悼念</button>
                 </div>
                 <div>
                     <p>旺财<br>2020-2023.4.22</p>
+                    <img src="4.jpg" alt="旺财的照片">
                     <button class="button" onclick="handlePetClick('旺财')">为她悼念</button>
                 </div>
                 <div>
                     <p>财财<br>2020-2023.1.14</p>
+                    <img src="5.jpg" alt="财财的照片">
                     <button class="button" onclick="handlePetClick('财财')">为她悼念</button>
                 </div>
             </div>
@@ -134,6 +138,7 @@
             <div class="pet-images">
                 <div>
                     <p>黑咪<br>?-2022.7</p>
+                    <img src="6.jpg" alt="黑咪的照片">
                     <button class="button" onclick="handlePetClick('黑咪')">为他悼念</button>
                 </div>
                 <div>
