--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
 </head>
 <body>
     <div class="container">
-        <h1>永远怀念，旺旺!</h1>
+        <h1>我会一直想念你，旺旺!</h1>
         <img src="1.jpg" alt="旺旺的照片">
        <p class="large">2015-2024.7.26</p>
         <button class="button" onclick="handleButtonClick()">为他悼念</button>
         <p>亲爱的旺旺，你是我们生命中最珍贵的朋友。你的温暖和陪伴让每一天都充满了快乐。虽然你已经离开了我们，但你永远活在我们的心中。感谢你带来的所有美好回忆，你的爱与忠诚将永远被铭记。愿你在天堂中安息，永远幸福。至此。</p>
-        <p>也为其他为我们家做出贡献的犬，猫表达怀念，他们的名字是：</p>
+        <p>也为家中的其他犬猫伙伴表达怀念，他们的名字是：</p>
 
         <!-- 狗的部分 -->
         <div class="pet-category">
             <h2>狗</h2>
             <div class="pet-images">
                 <div>
-                    <p>野狗<br>2023-now</p>
+                    <p>野狗<br>2023-2025.8</p>
                     <img src="2.jpg" alt="野狗的照片">
                 </div>
                 <div>
@@ -149,7 +149,7 @@
         <!-- 底部备注 -->
         <div class="footer">
             <p class="small">补充说明：因暂无旺财，财财相片，所以暂时空缺。花咪的懒得拍。</p>
-            <p class="large">2024.8.28 2024.10.23一修</p>
+            <p class="large">2024.8.28 2024.10.23一修 2025.12.27二修</p>
         </div>
     </div>
     <script>
@@ -157,10 +157,10 @@
 
         function handleButtonClick() {
             if (!hasClicked) {
-                alert("感谢您对他的悼念。");
+                alert("谢谢您的悼念，这份心意我和他们都收到了。");
                 hasClicked = true;
             } else {
-                alert("十分感谢!");
+                alert("十分感谢!(≧∀≦)ゞ");
             }
         }
 
