--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>一个悼念网站</title>
+    <title>只是一个悼念网站</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -99,7 +99,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>我会一直想念你，旺旺!</h1>
+        <h1>我会一直想念你</h1>
         <img src="1.jpg" alt="旺旺的照片">
        <p class="large">2015-2024.7.26</p>
         <button class="button" onclick="handleButtonClick()">为他悼念</button>
