--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #111; /* 更亮的背景色 */
-            color: #eee; /* 更亮的文字颜色 */
+            background-color: #111; 
+            color: #eee; 
             text-align: center;
             padding: 50px;
             margin: 0;
         }
         .container {
-            background-color: #444; /* 更亮的容器背景色 */
+            background-color: #444; 
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3); /* 更亮的阴影效果 */
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3); 
             display: inline-block;
             padding: 20px;
             max-width: 800px;
             margin: 0 auto;
         }
         h1 {
-            color: #fff; /* 更亮的标题颜色 */
+            color: #fff; 
         }
         p {
             font-size: 18px;
             line-height: 1.6;
-            color: #ddd; /* 更亮的段落文字颜色 */
+            color: #ddd; 
         }
         img {
             max-width: 100%;
@@ -36,17 +36,17 @@
             border-radius: 8px;
             border: 2px solid #fff;
             margin: 10px 0;
-            filter: grayscale(100%); /* 默认为黑白 */
+            filter: grayscale(100%); 
         }
         .color-img {
-            filter: none; /* 颜色图像 */
+            filter: none; 
         }
         .pet-category {
             margin-top: 20px;
             text-align: center;
         }
         .pet-category h2 {
-            color: #fff; /* 类别标题颜色 */
+            color: #fff; 
         }
         .pet-images {
             display: flex;
@@ -68,9 +68,9 @@
             padding: 10px 20px;
             margin-top: 10px;
             font-size: 16px;
-            color: #eee; /* 与文字颜色一致 */
-            background-color: #666; /* 与背景色协调的灰色 */
-            border: 2px solid #ddd; /* 边框颜色与背景协调 */
+            color: #eee; 
+            background-color: #666; 
+            border: 2px solid #ddd; 
             border-radius: 5px;
             cursor: pointer;
             text-decoration: none;
@@ -79,20 +79,20 @@
             margin-right: auto;
         }
         .button:hover {
-            background-color: #777; /* 鼠标悬停时的颜色 */
+            background-color: #777; 
         }
         .count {
-            display: none; /* 隐藏计数 */
+            display: none; 
         }
         .footer {
             margin-top: 30px;
-            color: #ddd; /* 更亮的底部文字颜色 */
+            color: #ddd; 
         }
         .footer .small {
-            font-size: 12px; /* 较小的字体 */
+            font-size: 12px; 
         }
         .footer .large {
-            font-size: 24px; /* 较大的字体 */
+            font-size: 24px; 
             font-weight: bold;
         }
     </style>
@@ -103,10 +103,9 @@
         <img src="1.jpg" alt="旺旺的照片">
        <p class="large">2015-2024.7.26</p>
         <button class="button" onclick="handleButtonClick()">为他悼念</button>
-        <p>亲爱的旺旺，你是我们生命中最珍贵的朋友。你的温暖和陪伴让每一天都充满了快乐。虽然你已经离开了我们，但你永远活在我们的心中。感谢你带来的所有美好回忆，你的爱与忠诚将永远被铭记。愿你在天堂中安息，永远幸福。至此。</p>
+        <p>亲爱的旺旺，你是我们生命中最珍贵的朋友。你的温暖和陪伴让每一天都充满了快乐。虽然你已经离开了我们，但你永远活在我的心中。感谢你带来的美好回忆，你的爱与忠诚将永远被铭记。愿你安息。</p>
         <p>也为家中的其他犬猫伙伴表达怀念，他们的名字是：</p>
 
-        <!-- 狗的部分 -->
         <div class="pet-category">
             <h2>狗</h2>
             <div class="pet-images">
@@ -130,7 +129,6 @@
             </div>
         </div>
 
-        <!-- 猫的部分 -->
         <div class="pet-category">
             <h2>猫</h2>
             <div class="pet-images">
@@ -149,7 +147,7 @@
         <!-- 底部备注 -->
         <div class="footer">
             <p class="small">补充说明：因暂无旺财，财财相片，所以暂时空缺。花咪的懒得拍。</p>
-            <p class="large">2024.8.28 2024.10.23一修 2025.12.27二修</p>
+            <p class="large">2024.8.28 2024.10.23一修 2025.12.27二修 2026.2.6三修</p>
         </div>
     </div>
     <script>
