Enhance alert message for pet click event

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         }
 
         function handlePetClick(petName) {
-            alert("感谢您为" + petName + "悼念。");
+            alert("感谢您为" + petName + "悼念，这份心意我们收到了");
         }
     </script>
 </body>
