--- a/index.html
+++ b/index.html
@@ -149,15 +149,14 @@
             <p class="small">补充说明：因暂无旺财，财财相片，所以暂时空缺。花咪的懒得拍。</p>
             <p class="large">2024.8.28 2024.10.23一修 2025.12.27二修 2026.2.6三修</p>
         </div>
-        <p style="margin-top: 20px; color: #aaa; font-size: 14px;">
-    另一网站：
-    <a href="wangcai114514.github.io" 
-       style="color: #4da6ff;"
+        <p style="margin-top: 15px; font-size: 13px; color: #888;">
+    <a href="https://example.com"
+       style="color: #666; text-decoration: none;"
        target="_blank"
        rel="noopener noreferrer">
-       去看看？
+        → 其他网站
     </a>
- </p>
+   </p>
     </div>
     <script>
         let hasClicked = false;
